--- a/templates/parciais/_nav.html
+++ b/templates/parciais/_nav.html
@@ -1,7 +1,7 @@
 <!--_nav.html-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary static-top">
     <div class="container">
-        <a class="navbar-brand" href="index.html">Blog do Edu</a>
+        <a class="navbar-brand" href="{% url 'index' %}">Blog do Edu</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
