Adicionado links dinamicos ao navbar, alteracao no campo de busca, criacao templates categoria e busca

--- a/posts/templates/posts/post_categoria.html
+++ b/posts/templates/posts/post_categoria.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load humanize %}
 
-{% block titulo %} Início {% endblock %}
+{% block titulo %} Categoria {% endblock %}
 
 {% block conteudo %}
 
