--- a/posts/templates/posts/post_busca.html
+++ b/posts/templates/posts/post_busca.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load humanize %}
 
-{% block titulo %} Início {% endblock %}
+{% block titulo %} Busca {% endblock %}
 
 {% block conteudo %}
 
