Alterando templates de post_busca e post_categoria e correcao dos titulos

--- a/posts/templates/posts/post_detalhes.html
+++ b/posts/templates/posts/post_detalhes.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block titulo %}{{ post.titulo_post|title }} | {% endblock %}
+
 {% block conteudo %}
 
 <!-- POST -->
