--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -9,6 +9,12 @@
             <div class="col">
                 <p class="text-right">Made By Eduardo Brandão</p>
             </div>
+            <div class="col">
+                <a href="https://www.linkedin.com/in/eduardombrandao/">
+                <img style="width: 30px; height: 30px; margin-bottom: 20px;" class="text-right"
+                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDsN5i8bCjqal079EJP4B4RgUs1EtyXB8lgRyXFjV9e3Q4Sox-cSljFQ7YeHbyrGTjh5k&usqp=CAU"
+                     ></a>
+            </div>
         </div>
     </div>
 </footer>
